# ApexSol

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.agents/skills/hft-performance-optimizer/: SKILL.md
.github/workflows/: ci.yml
config/: programs.yaml  settings.yaml
src/: main.py
src/app/: lifecycle.py  orchestrator.py
src/config/: settings.py
src/engine/: entry_rules.py  exit_rules.py  features.py  indicators.py  microstructure.py  scoring.py  signals.py  sizing.py  strategy.py  strategy_models.py
src/execution/: executor.py  fees.py  jito.py  jito_client.py  sandwich.py  tx_builder.py
src/ingestion/: geyser.py  grpc_client.py  models.py  parser_pumpfun.py  parsers.py  stream.py  subscription.py
src/ingestion/proto/: __init__.py
src/observability/: health.py  logging.py  metrics.py
src/risk/: guards.py  position_rules.py
src/security/: audit.py  authority.py  concentration.py  gatekeeper.py  rugcheck.py
src/state/: token_store.py  windows.py
src/utils/: logger.py
tests/: test_engine.py  test_entry_rules.py  test_exit_rules.py  test_orchestrator.py  test_sizing.py  test_strategy.py
