[project]
name = "apexsol"
version = "0.1.0"
description = "ApexSol - Low latency Solana Pump.fun algorithmic trading pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "solana>=0.34.0",
    "solders>=0.21.0",
    "polars>=0.20.0",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
